Closed Bug 1395220 Opened 8 years ago Closed 8 years ago

Crash in mozilla::dom::FetchStream::RequestDataCallback

Categories

(Core :: DOM: Core & HTML, defect)

x86_64
macOS
defect
Not set
critical

Tracking

()

RESOLVED FIXED
mozilla57
Tracking Status
firefox-esr52 --- unaffected
firefox55 --- unaffected
firefox56 --- unaffected
firefox57 --- fixed

People

(Reporter: yury, Assigned: baku)

References

()

Details

(Keywords: crash)

Crash Data

Attachments

(1 file)

This bug was filed from the Socorro interface and is report bp-91b70f40-4dd2-48b0-ae7b-bdd710170830. ============================================================= STR: * make sure dom.streams.enabled and javascript.options.streams set to true * open http://54.67.70.0:8877/27ed1f6e2911d2a/web/viewer.html
Attached patch stream.patchSplinter Review
Multiple read requests can occur.
Assignee: nobody → amarchesini
Attachment #8903052 - Flags: review?(bkelly)
Attachment #8903052 - Flags: review?(bkelly) → review+
Pushed by amarchesini@mozilla.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/c495a173ddf7 FetchStream must support multiple read requests, r=bkelly
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla57
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: