Bug 1395220 - FetchStream must support multiple read requests, r=bkelly